--- a/webview-ui/src/i18n/locales/en/chat.json
+++ b/webview-ui/src/i18n/locales/en/chat.json
@@ -282,7 +282,7 @@
 		"title": "🎉 ACode {{version}} Released",
 		"description": "Introducing <bold>ACode Cloud:</bold> Bringing the power of Roo beyond the IDE",
 		"feature1": "<bold>Track task progress from anywhere (Free):</bold> Get real-time updates on long-running tasks without being stuck in your IDE",
-		"feature2": "<bold>Control the Roo Extension remotely (Pro):</bold> Start, stop, and interact with tasks from a chat-based browser interface.",
+		"feature2": "<bold>Control the ACode Extension remotely (Pro):</bold> Start, stop, and interact with tasks from a chat-based browser interface.",
 		"learnMore": "Ready to take control? Learn more <learnMoreLink>here</learnMoreLink>.",
 		"visitCloudButton": "Visit ACode Cloud",
 		"socialLinks": "Join us on <xLink>X</xLink>, <discordLink>Discord</discordLink>, or <redditLink>r/RooCode</redditLink>"
